--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">Developers Life</string>
     <string name="network_error_message">Произошла ошибка при загрузке данных. Проверьте подключение к сети.</string>
     <string name="repeat_button_text">Повторить</string>
+
+    <string name="gif_image_view_description">Фрейм для показа .gif-анимаций</string>
+    <string name="no_internet_image_view_description">Значок отсутствия сети</string>
 </resources>
